--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-filter==22.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-flex-fields==1.0.0
+drf-spectacular==0.25.1
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
@@ -16,6 +17,7 @@ Jinja2==3.1.2
 jsonschema==4.17.3
 Markdown==3.4.1
 MarkupSafe==2.1.1
+openapi-codec==1.3.2
 packaging==21.3
 Pillow==9.3.0
 PyJWT==2.6.0
@@ -26,6 +28,8 @@ PyYAML==6.0
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+simplejson==3.18.0
+six==1.16.0
 sqlparse==0.4.3
 tzdata==2022.7
 uritemplate==4.1.1
