--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ Pillow==9.3.0
 PyJWT==2.6.0
 pyparsing==3.0.9
 pyrsistent==0.19.2
+python-decouple==3.7
 pytz==2022.6
 PyYAML==6.0
 requests==2.28.1
